--- a/index.html
+++ b/index.html
@@ -39,7 +39,22 @@
                 <span>Facebook</span>
         </li>
     </ul>
-    <a href=mailto:ht.hophuoctrung@gmail.com?subject="Github contact"><button>contact me</button></a>
+    <a href='mailto:ht.hophuoctrung@gmail.com?subject="Github contact"''><button>contact me</button></a>
    </div>
+   <footer class="footer">
+        <div class="copy">
+            <a href='mailto:ht.hophuoctrung@gmail.com?subject="Github contact"''>E: ht.hophuoctrung@gmail.com</a><br>
+            <a href="tel:+84935896372">T: (+84) 0935 896 372</a>
+        </div>
+        <div class="soc-box">
+        <div class="follow-label">Follow Me</div>
+        <div class="soc"> 
+            <a target="_blank" href="https://www.linkedin.com/in/hophuoctrung"> <span class="ion fab fa-linkedin-in"></span> </a> 
+            <a target="_blank" href="https://github.com/michaelkingBrother"> <span class="ion fab fa-github"></span> </a> 
+            <a target="_blank" href="https://bignote.bigbrothers.top/members/hotuhai/"> <span class="ion fab fa-facebook-f"></span> </a> 
+            <a target="_blank" href="https://hophuoctrung.bigbrothers.top/"> <span class="ion fab fa-instagram"></span> </a>
+        </div>
+        </div><div class="clear"></div>
+    </footer>
 </body>
 </html>
